--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -12,6 +12,9 @@
       border: 1px solid black;
       width: 50px;
       height: 50px;
+      text-align: center;
+      font-size: 30px;
+      font-weight: bold;
     }
   </style>
 </head>
